<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".ProfileCustomer2">

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="72dp"
        android:text="@string/btnBackProfile"
        android:textColor="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="72dp"
        android:text="@string/UpdateProfile"
        android:textColor="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackProfile" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="221dp"
        android:layout_height="96dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentOption">

        <RadioButton
            android:id="@+id/rdbtnYes"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:text="@string/rdBtnYesProfile"
            android:textColor="#424242"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <RadioButton
            android:id="@+id/rdBtnNo"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:text="@string/rdBtnProfileNo"
            android:textColor="#424242"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtStudentOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtRdBtnProfileAreYouStudent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOrganization"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="19dp"
        android:text="@string/txtOranisation"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/edTxtOrganization"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrganization"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="33dp"
        android:text="@string/txtStudentID"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtOrganization" />

    <EditText
        android:id="@+id/edTxtStudentNumber"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint5"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentID"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>