<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="146dp"
        android:layout_height="71dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="136dp"
        android:layout_height="29dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImage" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/menuItemPrice"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/txtDescription"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="60dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="41dp"
        android:text="@string/ItemQty"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="25dp"
        android:focusable="false"
        android:text="@string/txtCheck"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/qty"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="79dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:text="@string/ItemPrice1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>