<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".CustomerOrder">
    <ListView
        android:id="@+id/listview"
        android:layout_width="317dp"
        android:layout_height="176dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="43dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:text="@string/orderSumary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="41dp"
        android:text="@string/Item1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="87dp"
        android:layout_height="34dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="41dp"
        android:text="@string/qty"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/ItemPrice1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="214dp"
        android:layout_height="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:text="@string/BillBeforeTax"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview" />

    <TextView
        android:id="@+id/billBeforeTax"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="42dp"
        android:text="@string/ItemQty"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/listview"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="214dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="22dp"
        android:text="@string/BillAfterTax"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/billAfterTax"
        android:layout_width="84dp"
        android:layout_height="28dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="23dp"
        android:text="@string/ItemQty"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/billBeforeTax"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/deliveryOption"
        android:layout_width="275dp"
        android:layout_height="56dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="26dp"
        android:text="@string/deliveryOption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />



</androidx.constraintlayout.widget.ConstraintLayout>