<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".CustomerDelivery">

    <TextView
        android:id="@+id/delTyeOpt"
        android:layout_width="258dp"
        android:layout_height="38dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="46dp"
        android:text="@string/deliveryOpt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="323dp"
        android:layout_height="118dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delTyeOpt">

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickText"
            android:text="@string/rdbtn1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/del"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:onClick="onClickText"
            android:text="@string/rdbtn2"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmDel"
        android:layout_width="243dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="92dp"
        android:text="@string/delstatus"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoc" />

    <TextView
        android:id="@+id/txtInfoDel"
        android:layout_width="332dp"
        android:layout_height="83dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:text="@string/pickup"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtLoc"
        android:layout_width="332dp"
        android:layout_height="83dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:hint="@string/edTxtLocation"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#4E342E"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoDel"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>