<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="286dp"
        android:layout_height="184dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:contentDescription="@string/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edTxtUserName"
        android:layout_width="375dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/edUserName"
        android:inputType="textPersonName"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/edTxtPassword"
        android:layout_width="375dp"
        android:layout_height="65sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="13dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/edPassword"
        android:inputType="textPassword"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtUserName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#FFC800"
        android:text="@string/btnLogin"
        android:textColor="#6D4C41"
        android:textSize="13sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPassword" />

    <Button
        android:id="@+id/btnSignManager"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="#FFC800"
        android:text="@string/btnSignManager"
        android:textColor="#6D4C41"
        android:textSize="13sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignCust" />

    <Button
        android:id="@+id/btnSignCust"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="#FFC800"
        android:text="@string/btnSignCust"
        android:textColor="#6D4C41"
        android:textSize="13sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="#FFC800"
        android:shadowColor="#FF9800"
        android:text="@string/btnForgetPass"
        android:textColor="#6D4C41"
        android:textSize="13sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPassword"
        app:strokeColor="#FF9800"
        app:strokeWidth="0sp" />

</androidx.constraintlayout.widget.ConstraintLayout>