<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".ManagerRegistration">

    <TextView
        android:id="@+id/txtTitleManagerRegistration"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="16dp"
        android:text="@string/userRegister"
        android:textAlignment="center"
        android:textColor="#491111"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxtUserNameManager"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registerUser"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleManagerRegistration"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edTxtPasswordManager"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registerPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtUserNameManager"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/edTxtFullNameManager"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registerName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPasswordManager"
        tools:ignore="TextContrastCheck"
        tools:textSize="20sp" />

    <EditText
        android:id="@+id/edTxtRestaurantName"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edTxtRestName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtFullNameManager"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edTxtLocation"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edTxtLocation"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPostalAddress"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtRestaurantName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edTxtPhoneNumber"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edPhoneNumber"
        android:importantForAutofill="no"
        android:inputType="none|phone"
        android:textColor="#B71C1C"
        android:textColorHint="#B71C1C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtLocation"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="278dp"
        android:layout_height="67dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFC800"
        android:text="@string/txtSubmit"
        android:textColor="#6D4C41"
        android:textSize="13sp"
        app:cornerRadius="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxtPhoneNumber"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>